--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,8 @@
 .flex-container > div {
   border: 1px solid pink;
   width: 100%;
-  height: 500px;
+  height:100vh;
+  background: #303950;
 }
-.pie-container {
-  display:inline-flex;
-}
+
+html, body {margin: 0; height: 100%; overflow: hidden}
